--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -25,8 +25,8 @@
       {% if author.employer %}
         <li><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i> {{ author.employer }}</li>
       {% endif %}
-      {% if author.uri %}
-        <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-link" aria-hidden="true"></i> Website</a></li>
+      {% if author.uri %} 
+        <li><a href="{{ author.uri }}"><i class="fas fa-fw fa-arrow-up-right-from-square" aria-hidden="true"></i> Website</a></li>
       {% endif %}
       {% if author.email %}    
         <li><a href="mailto:{{ author.email }}"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i> Email</a></li>
