--- a/assets/css/custom.scss
+++ b/assets/css/custom.scss
@@ -22,7 +22,7 @@ p, li, blockquote {
 /* whole top bar */
 .masthead,
 .greedy-nav {
-  background-color: #758694;  
+  background-color: #405D72;  
   max-width: 100% !important;
   width: 100% !important;
   margin: 0 !important;
